# runpumpkin

./: ARCHITECTURE.md  CODEOWNERS.md  Cargo.toml  README.md  SECURITY.md  mkdocs.yml
.github/workflows/: lib.yml  plugin.yml
docs/: getting-started.md  index.md
docs/modules/: locator.md  tablist.md
src/: build.rs  config.rs  download.rs  main.rs
src/modules/mechanics/: locator.rs  player.rs
