[package]
name = "runpumpkin"
version = "0.1.2"
edition = "2024"
description = "Run a Pumpkin Minecraft server with your plugin for local testing"
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/runpumpkin"

[[bin]]
name = "runpumpkin"

[dependencies]
anyhow = "1"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
